<resources>
    <string name="app_name">Mi Personalidad</string>
    <string name="btnBFIInformation">Información sobre los cinco factores</string>
    <string name="btnBFITest">Responder test</string>
    <string name="btnBFITestResults">Ver últimos resultados</string>
    <string name="btnResearch">Apoyar en proyectos de investigación</string>
    <string name="btnOther">Other</string>

    <string name="information_title">El modelo de los cinco factores de la personalidad</string>
    <string name="openness_name">Apertura a la experiencia</string>
    <string name="conscientiousness_name">Responsabilidad</string>
    <string name="extraversion_name">Extraversión</string>
    <string name="agreeableness_name">Amabilidad</string>
    <string name="neuroticism_name">Neuroticismo</string>
    <string name="bfi_title">Medición de la personalidad</string>
    <string name="references_title">Referencias</string>

    <string name="information_introduction">El modelo de los cinco factores de la personalidad, también conocido como el Big Five, es una teoría ampliamente aceptada en psicología que describe cinco dimensiones clave de la personalidad humana: Apertura a la experiencia, Responsabilidad, Extraversión, Amabilidad y Neuroticismo.</string>

    <string name="openness_explanation">Este rasgo refleja la curiosidad intelectual, la creatividad y la preferencia por la variedad y la novedad. Las personas con alta apertura son imaginativas, artísticas y están abiertas a nuevas ideas y experiencias. Por el contrario, quienes tienen baja apertura tienden a ser más convencionales, prácticas y prefieren rutinas familiares.</string>
    <string name="conscientiousness_explanation">Este factor indica el grado de organización, diligencia y control que tiene una persona sobre sus impulsos. Las personas con alta responsabilidad son organizadas, meticulosas y tienen un fuerte sentido del deber. Aquellas con baja responsabilidad pueden ser más impulsivas, desorganizadas y menos enfocadas en alcanzar metas a largo plazo.</string>
    <string name="extraversion_explanation">Este rasgo se refiere a la energía social, la sociabilidad y la tendencia a buscar la estimulación externa. Las personas extrovertidas son enérgicas, asertivas y disfrutan de la interacción social. Por otro lado, las personas con baja extraversión, o introvertidas, tienden a ser más reservadas, reflexivas y disfrutan de la soledad.</string>
    <string name="agreeableness_explanation">Este factor mide la tendencia a ser compasivo, cooperativo y a mantener relaciones interpersonales positivas. Las personas con alta amabilidad son empáticas, confiables y buscan evitar conflictos. Las personas con baja amabilidad pueden ser más competitivas, críticas y enfocadas en sus propios intereses.</string>
    <string name="neuroticism_explanation">Este rasgo evalúa la estabilidad emocional y la tendencia a experimentar emociones negativas como ansiedad, depresión o irritabilidad. Las personas con alto neuroticismo son más propensas a sufrir estrés y tener fluctuaciones emocionales intensas. Las personas con bajo neuroticismo son más emocionalmente estables y tienden a manejar mejor las situaciones estresantes.</string>
    <string name="bfi_explanation">Para conocer la personalidad de un individuo, se suelen utilizar herramientas como el Inventario de los Cinco Grandes (BFI por sus siglas en inglés): un cuestionario diseñado para medir objetivamente cada una de las cinco dimensiones del modelo. Dada su confiabilidad y validez, el BFI se suele utilizar tanto en la investigación como en la práctica psicológica, y es la herramienta usada por esta aplicación.</string>
    <string name="reference1">John, O. P., Donahue, E. M., &amp; Kentle, R. L. (1991). Big five inventory. Journal of personality and social psychology.</string>
    <string name="reference2">Benet-Martínez, V., &amp; John, O. P. (1998). Los Cinco Grandes across cultures and ethnic groups: Multitrait-multimethod analyses of the Big Five in Spanish and English. Journal of personality and social psychology, 75(3), 729.</string>
    
    <string name="score_out_of_range">No se pudo determinar el resultado correctamente.</string>
    <string name="openness_low">Tiendes a preferir la rutina y las experiencias familiares. Explorar nuevas ideas o actividades a veces puede ser abrumador para ti. Por ello, puede que te sientas más a gusto siguiendo tradiciones ya establecidas y buscando soluciones prácticas; sin embargo, incluir un par de cosas nuevas en tu día a día podría enriquecer tu vida.</string>
    <string name="openness_medium">Disfrutas de un equilibrio entre la rutina y la novedad. Sientes curiosidad por tener nuevas experiencias, pero también valoras la estructura en tu vida cotidiana. Esta flexibilidad te permite explorar nuevas ideas sin perder tu centro.</string>
    <string name="openness_high">Tienes una gran imaginación, y disposición a tener nuevas experiencias. Es muy posible que tengas una gran apreciación por el arte, la creatividad y el pensamiento abstracto. Adoptar diferentes perspectivas te resulta natural, lo que te hace innovador y adaptable.</string>
    <string name="conscientiousness_low">Tiendes a ser más relajado con respecto a la estructura y la planificación. Ésto te permite abordar las tareas de manera más flexible y espontánea, aunque a veces puedes dejar las cosas para el último minuto. Considera encontrar pequeñas estrategias para mantener cierto nivel de organización cuando sea necesario.</string>
    <string name="conscientiousness_medium">Eres moderadamente responsable, encontrando un buen equilibrio entre la organización y el desorden. Este equilibrio te ayuda a mantenerte como una persona productiva, sin sentir demasiada rigidez ni estrés por las expectativas.</string>
    <string name="conscientiousness_high">Eres altamente responsable, confiable y con un alto sentido de la organización. Te agrada establecer metas claras, y trabajas duro para lograrlas. Esta diligencia te hace sumamente eficiente; pero recuerda dejar espacio para la relajación y la espontaneidad de vez en cuando.</string>
    <string name="extraversion_low">Tienes disposición a la introversión, prefiriendo entornos más tranquilos y grupos pequeños. Las interacciones sociales a veces pueden resultarte agotadoras, por lo que usualmente te sentirás mejor pasando tiempo a solas y realizando actividades donde no llames mucho la atención.</string>
    <string name="extraversion_medium">Encuentras un equilibrio entre la extraversión y la introversión, disfrutando de las interacciones sociales con moderación. Puedes ser extrovertido cuando es necesario, pero también valoras tu tiempo a solas para recargar energías. Esta adaptabilidad te permite prosperar en diferentes entornos sociales.</string>
    <string name="extraversion_high">Eres extrovertido y sociable. Disfrutas mucho de la compañía de los demás. Prosperas en entornos dinámicos, y las interacciones sociales te hacen sentir con energía. Tu entusiasmo es contagioso, y es probable que disfrutes de ser el centro de atención.</string>
    <string name="agreeableness_low">Eres una persona directa y asertiva en sus interacciones. Aunque esto puede ser beneficioso para satisfacer tus necesidades, tu enfoque a veces puede ser recibido de forma negativa por los demás. Considera encontrar maneras de expresar tus pensamientos tomando en cuenta los sentimientos ajenos; ésto podría beneficiar tus relaciones con otras personas.</string>
    <string name="agreeableness_medium">Eres moderadamente amable, logrando un equilibrio entre la cooperación y la asertividad. Valoras la armonía en tus relaciones, pero también sabes defender tus propias necesidades cuando es necesario hacerlo.</string>
    <string name="agreeableness_high">Eres una persona sumamente compasiva y cooperativa. Probablemente priorizas las necesidades de los demás y te esfuerzas por mantener la armonía en tus relaciones. Tu empatía y amabilidad te convierten en una gran amistad, aunque es importante asegurarte de que también se satisfagan tus propias necesidades.</string>
    <string name="neuroticism_low">Tiendes a ser emocionalmente estable y resistente. Las situaciones estresantes rara vez te desestabilizan, y en general mantienes una actitud tranquila. Aunque esta estabilidad emocional es una fortaleza, está bien expresar tus sentimientos cuando las cosas te afectan.</string>
    <string name="neuroticism_medium">Tienes un temperamento emocional equilibrado. Aunque a veces puedes sentir estrés o ansiedad, en general gestionas bien tus emociones. Esta capacidad para manejar altibajos te ayuda a mantener una perspectiva constante sobre la vida.</string>
    <string name="neuroticism_high">Eres susceptible a experimentar altibajos emocionales con frecuencia. El estrés y la ansiedad pueden muchas veces ser desafiantes para ti, pero esto también significa que estás muy en sintonía con tus emociones. Desarrollar estrategias para manejar el estrés puede ayudarte a mantener el equilibrio emocional.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>