<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestSelectionFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBFIInformation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/button_text_color"
            android:text="@string/btnBFIInformation"
            app:icon="@drawable/book_icon"
            app:iconSize="48dp"
            app:iconGravity="textTop"
            app:iconTint="@null"
            app:iconPadding="16dp"
            app:layout_constraintHeight_percent=".25"
            app:layout_constraintWidth_percent=".99"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBFITest"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/red"
            android:textColor="@color/button_text_color"
            android:text="@string/btnBFITest"
            app:icon="@drawable/test_respond_icon"
            app:iconSize="48dp"
            app:iconGravity="textTop"
            app:iconTint="@null"
            app:iconPadding="16dp"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintWidth_percent=".49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBFIInformation"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBFITestResults"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/aquamarine"
            android:textColor="@color/button_text_color"
            android:text="@string/btnBFITestResults"
            app:icon="@drawable/test_results_icon"
            app:iconSize="48dp"
            app:iconGravity="textTop"
            app:iconTint="@null"
            app:iconPadding="16dp"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintWidth_percent=".49"
            app:layout_constraintStart_toEndOf="@id/btnBFITest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBFIInformation"/>

        <!-- Info Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/button_text_color"
            android:text="@string/btnResearch"
            app:icon="@drawable/microscope_icon"
            app:iconSize="48dp"
            app:iconGravity="textTop"
            app:iconTint="@null"
            app:iconPadding="16dp"
            app:layout_constraintHeight_percent=".25"
            app:layout_constraintWidth_percent=".99"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBFITestResults"
            />
</androidx.constraintlayout.widget.ConstraintLayout>